--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.7.4",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "@chakra-ui/icons": "^2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
